--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
   "dependencies": {
     "@livekit/components-react": "^2.9.9",
     "@phosphor-icons/react": "^2.1.8",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toolbar": "^1.1.10",
+    "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "buffer-image-size": "^0.6.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "jose": "^6.0.12",
+    "jsonwebtoken": "^9.0.2",
     "livekit-client": "^2.13.3",
     "livekit-server-sdk": "^2.13.0",
+    "lucide-react": "^0.475.0",
     "mime": "^4.0.7",
     "motion": "^12.16.0",
     "next": "15.4.7",
