--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
-    "typescript": "^5"
+    "typescript": "5.8.4"
   },
   "packageManager": "pnpm@9.15.9"
 }
